product card photo stretch fix

--- a/src/Components/ProductCard/ProductCard.scss
+++ b/src/Components/ProductCard/ProductCard.scss
@@ -14,8 +14,7 @@
 
     &__photo {
         margin: auto;
-        height: 338px;
-        flex: 1;
+        width: 100%;
         pointer-events: none
     }
 
